<resources>
    <string name="app_name">taskmaster</string>
    <string name="tasks_Owner">%1$s Tasks</string>
    <string name="user_name">User Name :</string>
    <string name="save">Save</string>
</resources>